Change map data type to be WeakIdentityHashMap